basic html elements

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-It works!
-
-sync test
+<!doctype html>
+<html>
+<head>
+<title>bookstore</title>
+</head>
+<body>
+	<h1>bookstore</h1>
+	<p>empty paragraph</p>
+<body>
+</html>
