third paragraph added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<h1>bookstore</h1>
-	<p>empty paragraph</p>
+	<p>empty paragraph 1</p>
 	<p>empty paragraph 2</p>
+	<p>empty paragraph 3</p>
 <body>
 </html>
