7nd paragraph added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 	<p>empty paragraph 4</p>
 	<p>empty paragraph 5</p>
 	<p>empty paragraph 6</p>
+	<p>empty paragraph 7</p>
+	<p>empty paragraph 6</p>
 <body>
 </html>
