--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!doctype html>
 <html>
-<head>
-<title>bookstore</title>
-</head>
-<body>
-	<h1>bookstore</h1>
-	<p>empty paragraph 1</p>
-	<p>empty paragraph 2</p>
-	<p>empty paragraph 3</p>
-	<p>empty paragraph 4</p>
-	<p>empty paragraph 5</p>
-	<p>empty paragraph 6</p>
-	<p>empty paragraph 7</p>
-	<p>empty paragraph 8</p>
-<body>
+	<head>
+
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="./css/meyerreset.css">
+	    <link rel="stylesheet" href="./css/main.css">
+	    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+	    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="libs/json-to-table.js"></script>
+		<script src="js/main.js"></script>
+
+		<title>OneGroup Booksy Keeper</title>
+	
+	</head>
+	
+	<body>
+		<div class="navtop box">navtop</div>
+		<div class="logo box">logo</div>
+		<div class="gen_srch box">gen_srch</div>
+		<div class="func box">func</div>
+		<div class="gen_srchres box">gen_srchres</div>
+		<div class="func_res box">f_res<br><br>
+			 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nulla vel nibh vestibulum accumsan. Vestibulum non consectetur nisi, sit amet aliquet sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eu nisi ut nunc faucibus mattis ut a sapien. Sed cursus tellus vitae dolor ullamcorper, a cursus odio hendrerit. Nunc finibus interdum mauris non pulvinar. Donec nec feugiat turpis. Curabitur luctus sapien vitae lorem rhoncus efficitur. Curabitur eu ante sit amet urna fringilla pulvinar vitae sit amet augue. Quisque sed odio posuere erat tempus rhoncus. In scelerisque est ligula, porta commodo quam sodales quis. Donec hendrerit at enim non vehicula. Ut sem lorem, fringilla at mi eu, ornare vehicula mauris.
+
+			Suspendisse potenti. Nam vel ex nulla. Mauris viverra ultrices ullamcorper. Maecenas iaculis ac odio sed eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed volutpat risus urna, a lacinia quam semper nec. Nam auctor tortor ut quam aliquam condimentum. Fusce eu ex a elit hendrerit tincidunt in ut erat.
+
+			Fusce nec neque id tellus ultricies congue. Etiam posuere odio ante, sit amet gravida felis maximus id. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis vel ullamcorper ipsum. Morbi venenatis, urna non commodo tincidunt, nulla nisl elementum dui, vel pellentesque leo mauris ac neque. Vivamus odio elit, condimentum non bibendum eget, gravida dictum arcu. Aenean ornare volutpat enim quis maximus.
+
+			Curabitur eleifend a nisi at luctus. Nunc varius at nulla ut finibus. Praesent sapien dolor, tempus sit amet risus sagittis, egestas lobortis lectus. Fusce vel facilisis leo. Cras mollis leo sit amet mi consequat, in varius nulla ultrices. Fusce rutrum ex a elementum tincidunt. Nulla arcu velit, rutrum a turpis ut, tincidunt condimentum ligula. Vestibulum molestie laoreet mattis. Donec varius, felis et mattis varius, nibh dolor rhoncus libero, sit amet cursus felis elit eu mi. Integer iaculis ullamcorper tempor. Nulla quam orci, porta at lorem ac, bibendum semper augue. Quisque tristique dui urna, ornare pretium erat commodo ac. Donec tincidunt enim sit amet nunc congue, pulvinar rutrum nulla interdum. Nam pretium, lacus vitae maximus feugiat, leo dolor consequat nisi, non tempor dui massa porta est. Maecenas eleifend leo dui, et rutrum ex consequat vel. 
+
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nulla vel nibh vestibulum accumsan. Vestibulum non consectetur nisi, sit amet aliquet sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eu nisi ut nunc faucibus mattis ut a sapien. Sed cursus tellus vitae dolor ullamcorper, a cursus odio hendrerit. Nunc finibus interdum mauris non pulvinar. Donec nec feugiat turpis. Curabitur luctus sapien vitae lorem rhoncus efficitur. Curabitur eu ante sit amet urna fringilla pulvinar vitae sit amet augue. Quisque sed odio posuere erat tempus rhoncus. In scelerisque est ligula, porta commodo quam sodales quis. Donec hendrerit at enim non vehicula. Ut sem lorem, fringilla at mi eu, ornare vehicula mauris.
+
+			Suspendisse potenti. Nam vel ex nulla. Mauris viverra ultrices ullamcorper. Maecenas iaculis ac odio sed eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed volutpat risus urna, a lacinia quam semper nec. Nam auctor tortor ut quam aliquam condimentum. Fusce eu ex a elit hendrerit tincidunt in ut erat.
+
+			Fusce nec neque id tellus ultricies congue. Etiam posuere odio ante, sit amet gravida felis maximus id. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis vel ullamcorper ipsum. Morbi venenatis, urna non commodo tincidunt, nulla nisl elementum dui, vel pellentesque leo mauris ac neque. Vivamus odio elit, condimentum non bibendum eget, gravida dictum arcu. Aenean ornare volutpat enim quis maximus.
+
+			Curabitur eleifend a nisi at luctus. Nunc varius at nulla ut finibus. Praesent sapien dolor, tempus sit amet risus sagittis, egestas lobortis lectus. Fusce vel facilisis leo. Cras mollis leo sit amet mi consequat, in varius nulla ultrices. Fusce rutrum ex a elementum tincidunt. Nulla arcu velit, rutrum a turpis ut, tincidunt condimentum ligula. Vestibulum molestie laoreet mattis. Donec varius, felis et mattis varius, nibh dolor rhoncus libero, sit amet cursus felis elit eu mi. Integer iaculis ullamcorper tempor. Nulla quam orci, porta at lorem ac, bibendum semper augue. Quisque tristique dui urna, ornare pretium erat commodo ac. Donec tincidunt enim sit amet nunc congue, pulvinar rutrum nulla interdum. Nam pretium, lacus vitae maximus feugiat, leo dolor consequat nisi, non tempor dui massa porta est. Maecenas eleifend leo dui, et rutrum ex consequat vel. 
+		</div>
+		<div class="navbtm box">navbtm</div>
+
+
+		
+
+		
+	<body>
 </html>
