fixat ett formulär för första user storyn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
 		<div class="navtop box">navtop</div>
 		<div class="logo box">logo</div>
 		<div class="gen_srch box">gen_srch</div>
-		<div class="func box">func</div>
+		<div class="func box">func
+      			<form class="deliveryInfo">
+
+      				<label for="isbn">ISBN number:</label>
+			        <input id="isbn" type="text" name="isbn" required>
+        			<label for="name">Enter the title of the book:</label>
+			        <input id="name" type="text" name="name" required>
+			        <label for="author">Enter the book's author:</label>
+			        <input id="author" type="text" name="author" required>
+			        <label for="amount">Enter the amount of books delivered:</label>
+			        <input id="amount" type="text" name="amount" >
+			        <label for="publisherprice">Enter the price from the publisher:</label>
+			        <input id="publisherprice" type="text" name="publisherprice" >
+			        <label for="customerprice">Calculate the price for the customer:</label>
+			        <input id="customerprice" type="text" name="customerprice">
+			        <label for="shelf">Enter the bookshelf you want to place the book:</label>
+			        <input type="text" name="shelf" >
+					<button type="submit">Submit</button>
+      			</form>
+      	</div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res<br><br>
 			 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nulla vel nibh vestibulum accumsan. Vestibulum non consectetur nisi, sit amet aliquet sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eu nisi ut nunc faucibus mattis ut a sapien. Sed cursus tellus vitae dolor ullamcorper, a cursus odio hendrerit. Nunc finibus interdum mauris non pulvinar. Donec nec feugiat turpis. Curabitur luctus sapien vitae lorem rhoncus efficitur. Curabitur eu ante sit amet urna fringilla pulvinar vitae sit amet augue. Quisque sed odio posuere erat tempus rhoncus. In scelerisque est ligula, porta commodo quam sodales quis. Donec hendrerit at enim non vehicula. Ut sem lorem, fringilla at mi eu, ornare vehicula mauris.
