Några buttons, justeringar på enheter (procent versus pixlar)

--- a/index.html
+++ b/index.html
@@ -15,28 +15,18 @@
 	</head>
 	
 	<body>
-		<div class="navtop box">navtop</div>
+		<div class="navtop box">
+			<button class="btn red delvy">Leverans</button>
+			<button class="btn yellow sales">Försäljning</button>
+			<button class="btn blue reports">Rapporter</button>
+			<button class="btn lblue cst_srch">Kundsök</button> 
+		</div>
+		<!-- <div class="logo box">Booksy keeper</div> -->
+		<div class="gen_srch box">gen_srch
+		</div>
 		<div class="logo box">logo</div>
 		<div class="gen_srch box">gen_srch</div>
 		<div class="func box">func
-      			<form class="deliveryInfo">
-
-      				<label for="isbn">ISBN number:</label>
-			        <input id="isbn" type="text" name="isbn" required>
-        			<label for="name">Enter the title of the book:</label>
-			        <input id="name" type="text" name="name" required>
-			        <label for="author">Enter the book's author:</label>
-			        <input id="author" type="text" name="author" required>
-			        <label for="amount">Enter the amount of books delivered:</label>
-			        <input id="amount" type="text" name="amount" >
-			        <label for="publisherprice">Enter the price from the publisher:</label>
-			        <input id="publisherprice" type="text" name="publisherprice" >
-			        <label for="customerprice">Calculate the price for the customer:</label>
-			        <input id="customerprice" type="text" name="customerprice">
-			        <label for="shelf">Enter the bookshelf you want to place the book:</label>
-			        <input type="text" name="shelf" >
-					<button type="submit">Submit</button>
-      			</form>
       	</div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res<br><br>
@@ -56,7 +46,12 @@
 
 			Curabitur eleifend a nisi at luctus. Nunc varius at nulla ut finibus. Praesent sapien dolor, tempus sit amet risus sagittis, egestas lobortis lectus. Fusce vel facilisis leo. Cras mollis leo sit amet mi consequat, in varius nulla ultrices. Fusce rutrum ex a elementum tincidunt. Nulla arcu velit, rutrum a turpis ut, tincidunt condimentum ligula. Vestibulum molestie laoreet mattis. Donec varius, felis et mattis varius, nibh dolor rhoncus libero, sit amet cursus felis elit eu mi. Integer iaculis ullamcorper tempor. Nulla quam orci, porta at lorem ac, bibendum semper augue. Quisque tristique dui urna, ornare pretium erat commodo ac. Donec tincidunt enim sit amet nunc congue, pulvinar rutrum nulla interdum. Nam pretium, lacus vitae maximus feugiat, leo dolor consequat nisi, non tempor dui massa porta est. Maecenas eleifend leo dui, et rutrum ex consequat vel. 
 		</div>
-		<div class="navbtm box">navbtm</div>
+		<div class="navbtm box">
+			<button class="btn btmr red delvy">Leverans</button>
+			<button class="btn btmr yellow sales">Försäljning</button>
+			<button class="btn btmr blue reports">Rapporter</button>
+			<button class="btn btmr lblue cst_srch">Kundsök</button>
+		</div>
 
 
 		
