--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
 		<div class="logo box">logo</div>
 		<div class="gen_srch box">gen_srch</div>
 		<div class="func box">func
+      			<form class="deliveryInfo">
+
+      				<label for="isbn">ISBN number:</label>
+			        <input id="isbn" type="text" name="isbn" required>
+        			<label for="name">Enter the title of the book:</label>
+			        <input id="name" type="text" name="name" required>
+			        <label for="author">Enter the book's author:</label>
+			        <input id="author" type="text" name="author" required>
+			        <label for="amount">Enter the amount of books delivered:</label>
+			        <input id="amount" type="text" name="amount" >
+			        <label for="publisherprice">Enter the price from the publisher:</label>
+			        <input id="publisherprice" type="text" name="publisherprice" >
+			        <label for="customerprice">Calculate the price for the customer:</label>
+			        <input id="customerprice" type="text" name="customerprice">
+			        <label for="shelf">Enter the bookshelf you want to place the book:</label>
+			        <input type="text" name="shelf">
+					<input type="submit" value="Submit">
+      			</form>
       	</div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res<br><br>
