--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="./css/meyerreset.css">
 	    <link rel="stylesheet" href="./css/main.css">
 	    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	    <script src="libs/jquery-1.11.1.min.js"></script>
+	    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="libs/json-to-table.js"></script>
 		<script src="js/main.js"></script>
 
