nu är inmatningsfunktionen klar!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="./css/meyerreset.css">
 	    <link rel="stylesheet" href="./css/main.css">
 	    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="libs/json-to-table.js"></script>
 		<script src="js/main.js"></script>
 
@@ -27,19 +27,17 @@
   			<form class="deliveryInfo">
 
   				<label for="isbn">ISBN number:</label>
-		        <input id="isbn" type="text" name="isbn" required>
+		        <input id="isbn" type="text" name="isbn" data-value-type="number" required>
     			<label for="name">Enter the title of the book:</label>
 		        <input id="name" type="text" name="name" required>
 		        <label for="author">Enter the book's author:</label>
 		        <input id="author" type="text" name="author" required>
-		        <label for="amount">Enter the amount of books delivered:</label>
-		        <input id="amount" type="text" name="amount" >
-		        <label for="publisherprice">Enter the price from the publisher:</label>
-		        <input id="publisherprice" type="text" name="publisherprice" >
-		        <label for="customerprice">Calculate the price for the customer:</label>
-		        <input id="customerprice" type="text" name="customerprice">
+		        <label for="amount_delivery">Enter the amount of books delivered:</label>
+		        <input id="amount_delivery" type="text" name="amount_delivery" data-value-type="number">
+		        <label for="fprice">Enter the price from the publisher:</label>
+		        <input id="fprice" type="text" name="fprice" data-value-type="number">
 		        <label for="shelf">Enter the bookshelf you want to place the book:</label>
-		        <input type="text" name="shelf">
+		        <input id="bookshelf" type="text" name="bookshelf">
 				<input type="submit" value="Submit">
   			</form>
       	</div>		
