--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<body>
 		<div class="navtop box">
-			<button class="btn red delvy">Leverans</button>
+			<button class="btn red delvy" value="delivery">Leverans</button>
 			<button class="btn yellow sales">Försäljning</button>
 			<button class="btn blue reports">Rapporter</button>
 			<button class="btn lblue cst_srch">Kundsök</button> 
@@ -24,35 +24,31 @@
 		<!-- <div class="logo box">Booksy keeper</div> -->
 		<div class="gen_srch box">gen_srch</div>
 		<div class="func box">func
-  			<form class="deliveryInfo">
-
-  				<label for="isbn">ISBN number:</label>
-		        <input id="isbn" type="text" name="isbn" data-value-type="number" required>
-    			<label for="name">Enter the title of the book:</label>
-		        <input id="name" type="text" name="name" required>
-		        <label for="author">Enter the book's author:</label>
-		        <input id="author" type="text" name="author" required>
-		        <label for="amount_delivery">Enter the amount of books delivered:</label>
-		        <input id="amount_delivery" type="text" name="amount_delivery" data-value-type="number">
-		        <label for="fprice">Enter the price from the publisher:</label>
-		        <input id="fprice" type="text" name="fprice" data-value-type="number">
-		        <label for="shelf">Enter the bookshelf you want to place the book:</label>
-		        <input id="bookshelf" type="text" name="bookshelf">
-				<input type="submit" value="Submit">
-  			</form>
-      	</div>		
+			<section class="formParentWrapper">
+  			<form class="deliveryInfo deliveryForm">
+  			<label for="isbn">ISBN number:</label>
+	        <input id="isbn" type="text" name="isbn" data-value-type="number" required>
+    		<label for="name">Enter the title of the book:</label>
+	        <input id="name" type="text" name="name" required>
+	        <label for="author">Enter the book's author:</label>
+	        <input id="author" type="text" name="author" required>
+	        <label for="amount_delivery">Enter the amount of books delivered:</label>
+	        <input id="amount_delivery" type="text" name="amount_delivery" data-value-type="number">
+	        <label for="fprice">Enter the price from the publisher:</label>
+	        <input id="fprice" type="text" name="fprice" data-value-type="number">
+	        <label for="shelf">Enter the bookshelf you want to place the book:</label>
+		    <input id="bookshelf" type="text" name="bookshelf">
+			<input type="submit" value="Submit">
+	  		</form>
+  		</section>
+    </div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res</div>
 		<div class="navbtm box">
-			<button class="btn btmr red delvy">Leverans</button>
+			<button class="btn btmr red delvy" value="delivery">Leverans</button>
 			<button class="btn btmr yellow sales">Försäljning</button>
 			<button class="btn btmr blue reports">Rapporter</button>
 			<button class="btn btmr lblue cst_srch">Kundsök</button>
 		</div>
-
-
-		
-
-		
 	<body>
 </html>
