--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" href="./css/meyerreset.css">
 	    <link rel="stylesheet" href="./css/main.css">
 	    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+	    <!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
+	    <script src="libs/jquery-1.11.1.min.js"></script>
 		<script src="libs/json-to-table.js"></script>
 		<script src="js/main.js"></script>
 
@@ -23,27 +24,41 @@
 		</div>
 		<!-- <div class="logo box">Booksy keeper</div> -->
 		<div class="gen_srch box">gen_srch</div>
-		<div class="func box">func
+		<div class="func box">
 			<section class="formParentWrapper">
   			<form class="deliveryInfo deliveryForm">
-  			<label for="isbn">ISBN number:</label>
-	        <input id="isbn" type="text" name="isbn" data-value-type="number" required>
-    		<label for="name">Enter the title of the book:</label>
-	        <input id="name" type="text" name="name" required>
-	        <label for="author">Enter the book's author:</label>
-	        <input id="author" type="text" name="author" required>
-	        <label for="amount_delivery">Enter the amount of books delivered:</label>
-	        <input id="amount_delivery" type="text" name="amount_delivery" data-value-type="number">
-	        <label for="fprice">Enter the price from the publisher:</label>
-	        <input id="fprice" type="text" name="fprice" data-value-type="number">
-	        <label for="shelf">Enter the bookshelf you want to place the book:</label>
-		    <input id="bookshelf" type="text" name="bookshelf">
-			<input type="submit" value="Submit">
+  				<fieldset>
+  					<legend>Leverans</legend>
+		  			<label for="isbn">ISBN<br>
+			        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" required>
+			        </label>
+		    		<label for="name">Titel<br>
+			        	<input id="name" type="text" name="name" size="40" required>
+			        	</label>
+			        <label for="author">Författare<br>
+			        	<input id="author" type="text" name="author" size="40" required>
+			        	</label>
+			        <br>
+			        <label for="amount_delivery">Antal ex.<br>
+			        	<input id="amount_delivery" type="text" name="amount_delivery" size="3" data-value-type="number">
+			        	</label>
+			        <label for="fprice">Förlagspris<br>
+			        	<input id="fprice" type="text" name="fprice" size="3" data-value-type="number">
+			        	</label>
+			        <label for="shelf">Hylla<br>
+				    	<input id="bookshelf" type="text" name="bookshelf" size="3">
+				    	</label>
+				    	<br>
+				    <label>
+						<input type="submit" value="Registrera">
+						</label>
+				</fieldset>
 	  		</form>
   		</section>
     </div>		
 		<div class="gen_srchres box">gen_srchres</div>
-		<div class="func_res box">f_res</div>
+		<div class="func_res box">f_res
+		</div>
 		<div class="navbtm box">
 			<button class="btn btmr red delvy" value="delivery">Leverans</button>
 			<button class="btn btmr yellow sales">Försäljning</button>
