--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	    <script src="libs/jquery-1.11.1.min.js"></script>
 		<script src="libs/json-to-table.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/kundsearch.js"></script>
 
 		<title>OneGroup Booksy Keeper</title>
 	
