lagt en generell section för resultat av våra funktioner samt ändring i values!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class="navtop box">
 			<button class="btn red delvy" value="delivery">Leverans</button>
-			<button class="btn yellow sales">Försäljning</button>
+			<button class="btn yellow sales" value="sales">Försäljning</button>
 			<button class="btn blue reports">Rapporter</button>
 			<button class="btn lblue cst_srch">Kundsök</button> 
 		</div>
@@ -59,10 +59,12 @@
     </div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res
+			<section class="showResults">
+			</section>
 		</div>
 		<div class="navbtm box">
 			<button class="btn btmr red delvy" value="delivery">Leverans</button>
-			<button class="btn btmr yellow sales">Försäljning</button>
+			<button class="btn btmr yellow sales" value="sales">Försäljning</button>
 			<button class="btn btmr blue reports">Rapporter</button>
 			<button class="btn btmr lblue cst_srch">Kundsök</button>
 		</div>
