Tillägg i index.html samt main.css för att visa resultat

--- a/index.html
+++ b/index.html
@@ -77,7 +77,35 @@
     </div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res
-			<section class="showResults">
+			<section class="showresults">
+				<form class="deliveryInfo registered">
+					<fieldset>
+	  					<legend>Registrerat</legend>
+			  			<label for="isbn">ISBN<br>
+				        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" disabled>
+				        </label>
+			    		<label for="name">Titel<br>
+				        	<input id="name" type="text" name="name" size="40" disabled>
+				        	</label>
+				        <label for="author">Författare<br>
+				        	<input id="author" type="text" name="author" size="40" disabled>
+				        	</label>
+				        <br>
+				        <label for="amount_delivery">Antal ex.<br>
+				        	<input id="amount_delivery" type="text" name="amount_delivery" size="3" data-value-type="number" disabled>
+				        	</label>
+				        <label for="fprice">Förlagspris<br>
+				        	<input id="fprice" type="text" name="fprice" size="3" data-value-type="number" disabled>
+				        	</label>
+				        <label for="shelf">Hylla<br>
+					    	<input id="bookshelf" type="text" name="bookshelf" size="3" disabled>
+					    	</label>
+					    	<br>
+					    <!-- <label>
+							<input type="submit" value="Registrera">
+							</label> -->
+					</fieldset>
+	  			</form>
 			</section>
 		</div>
 		<div class="navbtm box">
