lagt till en input för kundpriset

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 			        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" required>
 			        </label>
 		    		<label for="name">Titel<br>
-			        	<input id="name" type="text" name="name" size="40" required>
+			        	<input id="name" type="text" name="name" size="40">
 			        	</label>
 			        <label for="author">Författare<br>
-			        	<input id="author" type="text" name="author" size="40" required>
+			        	<input id="author" type="text" name="author" size="40">
 			        	</label>
 			        <br>
 			        <label for="amount_delivery">Antal ex.<br>
@@ -50,6 +50,10 @@
 				    	<input id="bookshelf" type="text" name="bookshelf" size="3">
 				    	</label>
 				    	<br>
+				     <label for="kund_price">Kundpris<br>
+			        	<p>Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" value="checkbox">
+			        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
+			        </label>
 				    <label>
 						<input type="submit" value="Registrera">
 						</label>
