ändrade id'n i index.html i formuläret för kvittot på registrering

--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
 				<form class="deliveryInfo registered">
 					<fieldset>
 	  					<legend>Registrerat</legend>
-			  			<label for="isbn">ISBN<br>
-				        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" disabled>
+			  			<label for="risbn">ISBN<br>
+				        	<input id="risbn" type="text" name="risbn" size="13" data-value-type="number" disabled>
 				        </label>
-			    		<label for="name">Titel<br>
-				        	<input id="name" type="text" name="name" size="40" disabled>
+			    		<label for="rname">Titel<br>
+				        	<input id="rname" type="text" name="rname" size="40" disabled>
 				        	</label>
-				        <label for="author">Författare<br>
-				        	<input id="author" type="text" name="author" size="40" disabled>
+				        <label for="rauthor">Författare<br>
+				        	<input id="rauthor" type="text" name="rauthor" size="40" disabled>
 				        	</label>
 				        <br>
-				        <label for="amount_delivery">Antal ex.<br>
-				        	<input id="amount_delivery" type="text" name="amount_delivery" size="3" data-value-type="number" disabled>
+				        <label for="ramount_delivery">Antal ex.<br>
+				        	<input id="ramount_delivery" type="text" name="ramount_delivery" size="3" data-value-type="number" disabled>
 				        	</label>
-				        <label for="fprice">Förlagspris<br>
-				        	<input id="fprice" type="text" name="fprice" size="3" data-value-type="number" disabled>
+				        <label for="rfprice">Förlagspris<br>
+				        	<input id="rfprice" type="text" name="rfprice" size="3" data-value-type="number" disabled>
 				        	</label>
-				        <label for="shelf">Hylla<br>
-					    	<input id="bookshelf" type="text" name="bookshelf" size="3" disabled>
+				        <label for="rshelf">Hylla<br>
+					    	<input id="rbookshelf" type="text" name="rbookshelf" size="3" disabled>
 					    	</label>
 					    	<br>
 					    <!-- <label>
