fått ihop vår prisändringsfunktion!

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 			        <label for="shelf">Hylla<br>
 				    	<input id="bookshelf" type="text" name="bookshelf" size="3">
 				    	</label>
-				    	<br>
 				     <label for="kund_price">Kundpris<br>
-			        	<p>Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" value="checkbox">
+			        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" value="checkbox">
 			        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
 			        </label>
+			        <br>
 				    <label>
 						<input type="submit" value="Registrera">
 						</label>
