--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				    	<input id="bookshelf" type="text" name="bookshelf" size="3">
 				    	</label>
 				     <label for="kund_price">Kundpris<br>
-			        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" value="checkbox">
+			        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" name="ownPrice" value="checkbox">
 			        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
 			        </label>
 			        <br>
@@ -104,6 +104,9 @@
 				        <label for="rshelf">Hylla<br>
 					    	<input id="rbookshelf" type="text" name="rbookshelf" size="3" disabled>
 					    	</label>
+					    <label for="kund_price">Kundpris<br>
+			        		<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
+			        	</label>
 					    	<br>
 					    <!-- <label>
 							<input type="submit" value="Registrera">
