--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 				        <label for="rshelf">Hylla<br>
 					    	<input id="rbookshelf" type="text" name="rbookshelf" size="3" disabled>
 					    	</label>
-					    <label for="kund_price">Kundpris<br>
-			        		<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
+					    <label for="rkund_price">Kundpris<br>
+			        		<input id="rkund_price" type="text" name="rkund_price" size="3" data-value-type="number">
 			        	</label>
 					    	<br>
 					    <!-- <label>
