tagit bort lite onödig kod plus inventerat!

--- a/index.html
+++ b/index.html
@@ -27,58 +27,58 @@
 		<div class="gen_srch box">gen_srch</div>
 		<div class="func box">
 			<section class="formParentWrapper">
-  			<form class="deliveryInfo deliveryForm">
-  				<fieldset>
-  					<legend>Leverans</legend>
-		  			<label for="isbn">ISBN<br>
-			        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" required>
-			        </label>
-		    		<label for="name">Titel<br>
-			        	<input id="name" type="text" name="name" size="40">
-			        	</label>
-			        <label for="author">Författare<br>
-			        	<input id="author" type="text" name="author" size="40">
-			        	</label>
-			        <br>
-			        <label for="amount_delivery">Antal ex.<br>
-			        	<input id="amount_delivery" type="text" name="amount_delivery" size="3" data-value-type="number">
-			        	</label>
-			        <label for="fprice">Förlagspris<br>
-			        	<input id="fprice" type="text" name="fprice" size="3" data-value-type="number">
-			        	</label>
-			        <label for="shelf">Hylla<br>
-				    	<input id="bookshelf" type="text" name="bookshelf" size="3">
-				    	</label>
-				     <label for="kund_price">Kundpris<br>
-			        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" name="ownPrice" value="checkbox">
-			        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
-			        </label>
-			        <br>
-				    <label>
-						<input type="submit" value="Registrera">
-						</label>
-				</fieldset>
-	  		</form>
-	  		<form class="searchInfo searchForm">
-  				<fieldset>
-  					<legend>Kundsök</legend>
-		  			<label for="isbn">ISBN<br>
-			        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number">
-			        </label>
-		    		<label for="name">Titel<br>
-			        	<input id="name" type="text" name="name" size="40">
-			        	</label>
-			        <label for="author">Författare<br>
-			        	<input id="author" type="text" name="author" size="40">
-			        	</label>
-			        <br>
-				    <label>
-						<input type="submit" value="Sök!">
-						</label>
-				</fieldset>
-	  		</form>
-  		</section>
-    </div>		
+	  			<form class="deliveryInfo deliveryForm">
+	  				<fieldset>
+	  					<legend>Leverans</legend>
+			  			<label for="isbn">ISBN<br>
+				        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number" required>
+				        </label>
+			    		<label for="name">Titel<br>
+				        	<input id="name" type="text" name="name" size="40">
+				        	</label>
+				        <label for="author">Författare<br>
+				        	<input id="author" type="text" name="author" size="40">
+				        	</label>
+				        <br>
+				        <label for="amount_delivery">Antal ex.<br>
+				        	<input id="amount_delivery" type="text" name="amount_delivery" size="3" data-value-type="number">
+				        	</label>
+				        <label for="fprice">Förlagspris<br>
+				        	<input id="fprice" type="text" name="fprice" size="3" data-value-type="number">
+				        	</label>
+				        <label for="shelf">Hylla<br>
+					    	<input id="bookshelf" type="text" name="bookshelf" size="3">
+					    	</label>
+					     <label for="kund_price">Kundpris<br>
+				        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" name="ownPrice" value="checkbox">
+				        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
+				        </label>
+				        <br>
+					    <label>
+							<input type="submit" value="Registrera">
+							</label>
+					</fieldset>
+		  		</form>
+		  		<form class="searchInfo searchForm">
+	  				<fieldset>
+	  					<legend>Kundsök</legend>
+			  			<label for="isbn">ISBN<br>
+				        	<input id="isbn" type="text" name="isbn" size="13" data-value-type="number">
+				        </label>
+			    		<label for="name">Titel<br>
+				        	<input id="name" type="text" name="name" size="40">
+				        	</label>
+				        <label for="author">Författare<br>
+				        	<input id="author" type="text" name="author" size="40">
+				        	</label>
+				        <br>
+					    <label>
+							<input type="submit" value="Sök!">
+							</label>
+					</fieldset>
+		  		</form>
+  			</section>
+    	</div>		
 		<div class="gen_srchres box">gen_srchres</div>
 		<div class="func_res box">f_res
 			<section class="showresults">
@@ -137,7 +137,7 @@
 			<button class="btn btmr red delvy" value="delivery">Leverans</button>
 			<button class="btn btmr yellow sales" value="sales">Försäljning</button>
 			<button class="btn btmr blue reports">Rapporter</button>
-			<button class="btn btmr lblue cst_srch">Kundsök</button>
+			<button class="btn btmr lblue cst_srch" value="search">Kundsök</button>
 		</div>
 	<body>
 </html>
