fått iordning rensa input funktionen i leveransen plus tagit bort sökboxarna + lite styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 			<button class="btn lblue cst_srch" value="search">Kundsök</button> 
 		</div>
 		<!-- <div class="logo box">Booksy keeper</div> -->
-		<div class="gen_srch box">gen_srch</div>
 		<div class="func box">
 			<section class="formParentWrapper">
 	  			<form class="deliveryInfo deliveryForm">
@@ -79,8 +78,7 @@
 		  		</form>
   			</section>
     	</div>		
-		<div class="gen_srchres box">gen_srchres</div>
-		<div class="func_res box">f_res
+		<div class="func_res box">
 			<section class="showresults">
 				<form class="deliveryInfo registered">
 					<fieldset>
