äntligen löst resultatvisningen!

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					    	<input id="bookshelf" type="text" name="bookshelf" size="3">
 					    	</label>
 					     <label for="kund_price">Kundpris<br>
-				        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" name="ownPrice" value="checkbox">
+				        	<p class="cprice">Vid insättning av nytt kundpris</p><input id="checkbox" type="checkbox" value="checkbox">
 				        	<input id="kund_price" type="text" name="kund_price" size="3" data-value-type="number">
 				        </label>
 				        <br>
