satt tillbaka rensainput

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					    	<input id="rbookshelf" type="text" name="rbookshelf" size="3" disabled>
 					    	</label>
 					    <label for="rkund_price">Kundpris<br>
-			        		<input id="rkund_price" type="text" name="rkund_price" size="3" data-value-type="number">
+			        		<input id="rkund_price" type="text" name="rkund_price" size="3" data-value-type="number" disabled>
 			        	</label>
 					    	<br>
 					    <!-- <label>
