sista inlägget för vårat projekt!

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 	<body>
 		<div class="navtop box">
 			<button class="btn red delvy" value="delivery">Leverans</button>
+			<!--
 			<button class="btn yellow sales" value="sales">Försäljning</button>
 			<button class="btn blue reports">Rapporter</button>
+		-->
 			<button class="btn lblue cst_srch" value="search">Kundsök</button> 
 		</div>
 		<!-- <div class="logo box">Booksy keeper</div> -->
@@ -79,6 +81,7 @@
   			</section>
     	</div>		
 		<div class="func_res box">
+			<!--
 			<section class="showresults">
 				<form class="deliveryInfo registered">
 					<fieldset>
@@ -106,12 +109,12 @@
 			        		<input id="rkund_price" type="text" name="rkund_price" size="3" data-value-type="number" disabled>
 			        	</label>
 					    	<br>
-					    <!-- <label>
+					    <label>
 							<input type="submit" value="Registrera">
-							</label> -->
+							</label>
 					</fieldset>
-	  			</form>
-	  		</section>
+	  			</form> 
+	  		</section> -->
 	  		<section class="showkundsearch">
 		       <article class="searchResultat">
  				<span class="p-name">
@@ -133,8 +136,10 @@
 		</div>
 		<div class="navbtm box">
 			<button class="btn btmr red delvy" value="delivery">Leverans</button>
+			<!--
 			<button class="btn btmr yellow sales" value="sales">Försäljning</button>
 			<button class="btn btmr blue reports">Rapporter</button>
+		-->
 			<button class="btn btmr lblue cst_srch" value="search">Kundsök</button>
 		</div>
 	<body>
