--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
   			</section>
     	</div>		
 		<div class="func_res box">
-			<!--
 			<section class="showresults">
 				<form class="deliveryInfo registered">
 					<fieldset>
@@ -105,16 +104,17 @@
 				        <label for="rshelf">Hylla<br>
 					    	<input id="rbookshelf" type="text" name="rbookshelf" size="3" disabled>
 					    	</label>
+					    <!--
 					    <label for="rkund_price">Kundpris<br>
 			        		<input id="rkund_price" type="text" name="rkund_price" size="3" data-value-type="number" disabled>
 			        	</label>
 					    	<br>
 					    <label>
 							<input type="submit" value="Registrera">
-							</label>
+							</label> -->
 					</fieldset>
 	  			</form> 
-	  		</section> -->
+	  		</section>
 	  		<section class="showkundsearch">
 		       <article class="searchResultat">
  				<span class="p-name">
